--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,11 +23,7 @@ python-crontab = "^2.5"
 PyYAML = "^5.4"
 retry = "^0.9"
 humanize = "^3.11"
+pre-commit = "^2.14.0"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7"
-black = "21.7b0"
-isort = "^5.9"
-mypy = "0.910"
-pytest = "^6.2"
-pytest-cov = "^2.12"
