--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,6 +32,7 @@ repos:
       - id: mypy
 
   - repo: https://github.com/PyCQA/bandit
-    rev: "1.7.0"
+    rev: 1.7.0
     hooks:
       - id: bandit
+        args: [--skip=B101,B322]
