--- a/action.yaml
+++ b/action.yaml
@@ -12,19 +12,19 @@ inputs:
         required: true
     schedules_client_secret:
         description: |
-            [Optional] If function is to be run with schedules, this is the
-            client secret to be used at runtime. Not providing this while also
-            passing schedules will cause an error to be raised.
+            If function is to be run with schedules, this is the client secret
+            to be used at runtime. Not providing this while also passing schedules
+            will cause an error to be raised.
         required: false
     schedules_client_id:
         description: |
-            [Optional] If function is to be run with schedules, this is the
-            client ID to be used at runtime. Not providing this while also
-            passing schedules will cause an error to be raised.
+            If function is to be run with schedules, this is the client ID
+            to be used at runtime. Not providing this while also passing schedules
+            will cause an error to be raised.
         required: false
     cdf_project:
-        description: The name of your CDF project.
-        required: true
+        description: The name of your CDF project. If given, will be checked against credentials.
+        required: false
     cdf_cluster:
         description: The cluster your customer's CDF project lives in.
         default: westeurope-1
@@ -36,7 +36,7 @@ inputs:
         required: true
     function_folder:
         description: Path to the folder where the source code for the function(s) can be found.
-        required: true
+        required: false
     function_file:
         description: Name of function file inside function folder, for instance, handler.py.
         default: handler.py
@@ -75,7 +75,7 @@ inputs:
         description: Set owner of a function, e.g. "My Client".
         required: false
 outputs:
-    function_external_id: # id of output
+    function_external_id:  # id of output
         description: The external ID of the function.
 runs:
     using: docker
