--- a/action.yaml
+++ b/action.yaml
@@ -22,6 +22,12 @@ inputs:
             to be used at runtime. Not providing this while also passing schedules
             will cause an error to be raised.
         required: false
+    schedules_tenant_id:
+        description: |
+            If function is to be run with schedules, this is the tenant ID
+            to be used at runtime. Not providing this while also passing schedules
+            will cause an error to be raised.
+        required: false
     cdf_project:
         description: The name of your CDF project. If given, will be checked against credentials.
         required: false
