--- a/action.yaml
+++ b/action.yaml
@@ -12,15 +12,21 @@ inputs:
         required: true
     schedules_client_secret:
         description: |
-            [Optional] If function is to be run with schedules, this is the
-            client secret to be used at runtime. Not providing this while also
-            passing schedules will cause an error to be raised.
+            If function is to be run with schedules, this is the client secret
+            to be used at runtime. Not providing this while also passing schedules
+            will cause an error to be raised.
         required: false
     schedules_client_id:
         description: |
-            [Optional] If function is to be run with schedules, this is the
-            client ID to be used at runtime. Not providing this while also
-            passing schedules will cause an error to be raised.
+            If function is to be run with schedules, this is the client ID
+            to be used at runtime. Not providing this while also passing schedules
+            will cause an error to be raised.
+        required: false
+    schedules_tenant_id:
+        description: |
+            If function is to be run with schedules, this is the tenant ID
+            to be used at runtime. Not providing this while also passing schedules
+            will cause an error to be raised.
         required: false
     cdf_project:
         description: The name of your CDF project.
@@ -36,7 +42,7 @@ inputs:
         required: true
     function_folder:
         description: Path to the folder where the source code for the function(s) can be found.
-        required: true
+        required: false
     function_file:
         description: Name of function file inside function folder, for instance, handler.py.
         default: handler.py
@@ -49,8 +55,8 @@ inputs:
             Relative path and name from (function_folder) of the file with schedules to be attached.
             Not passing this parameter -> no schedules will be attached. If the passed file does not
             exist, a warning will be issued, and no schedules will be attached. On all deployments,
-            all existing schedules are deleted (and recreated if there are any)! Note: Requires both
-            'schedules_client_secret' and 'schedules_client_id' to be passed!
+            all existing schedules are deleted (and recreated if there are any)! Note: Requires
+            'schedules_client_secret', 'schedules_tenant_id' and 'schedules_client_id' to be passed!
         required: false
     data_set_external_id:
         description: Data set external ID to use for the function-associated file (zipped code folder).
@@ -59,23 +65,27 @@ inputs:
         description: |
             Directory which contains code used by multiple functions. If not specified, will default
             to 'common' (if it exists).
-        default: common
         required: false
     remove_only:
-        description: Short-cut that ONLY removes the function (and all schedules linked) before quitting.
+        description: |
+            Short-cut that ONLY removes the function (and all schedules linked) before quitting. Only
+            requires deployment credentials, 'cdf_project' and 'function_external_id' to be passed.
         default: false
         required: false
     cpu:
-        description: Set number of CPU cores per function, e.g. 0.5.
+        description: 'Set number of CPU cores per function, e.g. 0.5. NB: Ignored for CDF projects on Azure!'
         required: false
     memory:
-        description: Set memory per function measured in GB, e.g. 0.8.
+        description: 'Set memory per function measured in GB, e.g. 0.8. NB: Ignored for CDF projects on Azure!'
         required: false
     owner:
         description: Set owner of a function, e.g. "My Client".
         required: false
+    function_description:
+        description: Set description field of a function, e.g. "This does X for Y if Z".
+        required: false
 outputs:
-    function_external_id: # id of output
+    function_external_id:  # id of output
         description: The external ID of the function.
 runs:
     using: docker
