Support for setting python runtime (#27)
* feat: Added support for changing Python runtime

* Point to API doc for default+allowed values

* Update deps to support PY runtime param

* Make runtime str always lower

Co-authored-by: Håkon V. Treider <haakonvt@gmail.com>

--- a/action.yaml
+++ b/action.yaml
@@ -92,6 +92,11 @@ inputs:
     env_vars:
         description: Set environment variables for your function. Accepts JSON with string key/value pairs.
         required: false
+    runtime:
+        description: |
+            Set function runtime (Python version). Not given translates into the API default, which can be found
+            along with the allowed versions in the API documentation.
+        required: false
 outputs:
     function_external_id:  # id of output
         description: The external ID of the function.
