--- a/action.yaml
+++ b/action.yaml
@@ -9,21 +9,23 @@ inputs:
         required: true
     deployment_tenant_id:
         description: |
-            Tenant ID to be used for deployment of the function. If using a custom identity
-            provider, you may pass `deployment_token_url` instead.
+            Tenant ID to be used for deployment of the function. If using a custom IDP (identity provider),
+            you may pass `deployment_token_url` instead. See README for more info.
         required: false
     deployment_token_url:
-        description: Url to the token provider endpoint (used with a custom identity provider).
+        description: |
+            Url to the token provider endpoint to be used for deployment of the function with a
+            custom IDP. See README for more info.
         required: false
     deployment_token_scopes:
         description: |
-            List of scopes (JSON) to be used with a custom identity provider.
+            List of scopes (JSON) to be used for deployment of the function with a custom IDP.
             See README for more info.
         required: false
     deployment_token_custom_args:
         description: |
-            Dictionary of key-value-pairs (JSON) used to obtain a token when using
-            a custom identity provider. See README for more info.
+            Dictionary (JSON) of custom arguments needed to obtain a token, to be used for deployment
+            of the function when using a custom IDP. See README for more info.
         required: false
     schedules_client_secret:
         description: |
@@ -41,21 +43,23 @@ inputs:
         description: |
             If function is to be run with schedules, this is the tenant ID
             to be used at runtime. Not providing this while also passing schedules
-            will cause an error to be raised. Note: If using a custom identity
-            provider, you may pass `schedules_token_url` instead.
+            will cause an error to be raised. Note: If using a custom IDP, you may
+            pass `schedules_token_url` instead.
         required: false
     schedules_token_url:
-        description: Url to the token provider endpoint (used with a custom identity provider).
+        description: |
+            Url to the token provider endpoint to be used for schedules (at runtime)
+            of the function with a custom IDP. See README for more info.
         required: false
     schedules_token_scopes:
         description: |
-            List of scopes (JSON) to be used with a custom identity provider.
-            See README for more info.
+            List of scopes (JSON) to be used for schedules (at runtime) of the function
+            with a custom IDP. See README for more info.
         required: false
     schedules_token_custom_args:
         description: |
-            Dictionary of key-value-pairs (JSON) used to obtain a token when using
-            a custom identity provider. See README for more info.
+            Dictionary (JSON) of custom arguments needed to obtain a token, to be used for
+            schedules (at runtime) of the function when using a custom IDP. See README for more info.
         required: false
     cdf_project:
         description: The name of your CDF project.
