Functions now in GA, swap exp sdk for standard

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,12 @@ skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
 
 [tool.poetry.dependencies]
 python = "^3.8"
-cognite-sdk-experimental = "^0, >=0.74.1"
 pydantic = "^1.8"
 python-crontab = "^2.5"
 PyYAML = "^5.4"
 retry = "^0, >=0.9"
 humanize = "^3.11"
 pre-commit = "^2.18"
+cognite-sdk = "^4.1.1"
 
 [tool.poetry.dev-dependencies]
