--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,16 +19,16 @@ skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
 [tool.poetry.dependencies]
 python = "^3.8"
 
-pydantic = "^1.10"
-python-crontab = "^2.7"
-pyyaml = "^6.0"
-humanize = "^4.4"
-pre-commit = "^2.21"
-decorator = "^5.1"
-cognite-sdk = {version = "^5.1", extras = ["functions"]}
+pydantic = ">=1.10"
+python-crontab = ">=2.7"
+pyyaml = ">=6.0"
+humanize = ">=4.4"
+pre-commit = ">=2.21"
+decorator = ">=5.1"
+cognite-sdk = {version = ">=5.1", extras = ["functions"]}
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.2"
+pytest = ">=7.2"
 
 [tool.pytest.ini_options]
 pythonpath = [
