Add extra index url (#51)
* fix: Added index url to actions

* Change to pydantic.HttpUrl. Fix extra_index_urls

* Add example input of extra_index_urls to README.md

---------

Co-authored-by: Håkon V. Treider <haakonvt@gmail.com>

--- a/action.yaml
+++ b/action.yaml
@@ -102,6 +102,17 @@ inputs:
             Set custom metadata for the function. Accepts JSON with string key/value pairs.
             For example, '{"version":"1.0.0","released":"2022-09-14"}'.
         required: false
+    index_url:
+        description: |
+            Index URL for Python Package Manager to use. Be aware of the intrinsic security
+            implications of using the index_url option
+        required: false
+    extra_index_urls:
+        description: |
+            Extra Index URLs for Python Package Manager to use. Be aware of the intrinsic security
+            implications of using the extra_index_urls option. Accepts JSON encoded list of strings,
+            for example: '["http://foo.bar", "https://bar.baz"]'
+        required: false
 outputs:
     function_external_id:  # id of output
         description: The external ID of the function.
