update the description of the common_folder to make it explicit it's not packed if not passed to the action

--- a/action.yaml
+++ b/action.yaml
@@ -64,8 +64,7 @@ inputs:
         required: false
     common_folder:
         description: |
-            Directory which contains code used by multiple functions. If not specified, will default
-            to 'common' (if it exists).
+            Directory which contains code used by multiple functions. If not provided, only the function folder is packed into the zip file.
         required: false
     remove_only:
         description: |
