--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,8 +32,9 @@ jobs:
     - id: parse_version
       name: "Parse version from ref"
       run: | # Returns the last component of the ref path, e.g. 'refs/tags/release/1.2.3-beta' -> '1.2.3-beta'
-        $version = split-path -leaf $env:GITHUB_REF
+        $version = split-path -leaf $env:GITHUB_REF_NAME
         echo "version=$version" >> $GITHUB_OUTPUT
+
     - name: "Build and push Docker image"
       uses: docker/build-push-action@v2
       with:
