--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: "Set up Docker Buildx"
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v2
       with:
         install: true
 
@@ -32,12 +32,13 @@ jobs:
     - id: parse_version
       name: "Parse version from ref"
       run: | # Returns the last component of the ref path, e.g. 'refs/tags/release/1.2.3-beta' -> '1.2.3-beta'
-        $version = split-path -leaf $env:GITHUB_REF
-        echo "version=$version" >> $GITHUB_OUTPUT
+        $version = split-path -leaf $env:GITHUB_REF_NAME
+        echo "version=$version" >> $env:GITHUB_OUTPUT
+
     - name: "Build and push Docker image"
       uses: docker/build-push-action@v2
       with:
         context: .
         push: true
         file: ./Dockerfile-azure-pipelines
-        tags: cognite/function-action:${{ steps. parse_version.outputs.version }}
+        tags: cognite/function-action:${{ steps.parse_version.outputs.version }}
