--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,10 +35,18 @@ jobs:
         $version = split-path -leaf $env:GITHUB_REF_NAME
         echo "version=$version" >> $env:GITHUB_OUTPUT
 
-    - name: "Build and push Docker image"
+    - name: "Build and push Docker image for Azure"
       uses: docker/build-push-action@v2
       with:
         context: .
         push: true
         file: ./Dockerfile-azure-pipelines
+        tags: cognite/function-action:${{ steps.parse_version.outputs.version }}-azure
+
+    - name: "Build and push Docker image"
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        file: ./Dockerfile
         tags: cognite/function-action:${{ steps.parse_version.outputs.version }}
