--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,7 +35,7 @@ jobs:
         $version = split-path -leaf $env:GITHUB_REF_NAME
         echo "version=$version" >> $env:GITHUB_OUTPUT
 
-    - name: "Build and push Docker image for Azure"
+    - name: "Build and push Docker image for Azure Pipelines"
       uses: docker/build-push-action@v2
       with:
         context: .
@@ -43,7 +43,7 @@ jobs:
         file: ./Dockerfile-azure-pipelines
         tags: cognite/function-action:${{ steps.parse_version.outputs.version }}-azure
 
-    - name: "Build and push Docker image"
+    - name: "Build and push Docker image for Github Actions"
       uses: docker/build-push-action@v2
       with:
         context: .
