--- a/Dockerfile-azure-pipelines
+++ b/Dockerfile-azure-pipelines
@@ -1,4 +1,4 @@
-FROM python:3.8-slim AS builder
+FROM python:3.10-slim AS builder
 
 ADD src /app
 WORKDIR /
@@ -16,6 +16,6 @@ RUN poetry export -f requirements.txt --output /requirements.txt --without-hashe
 # We are installing a dependency here directly into our app source dir
 RUN pip3 install --target=/app -r /requirements.txt --upgrade
 
-FROM python:3.8-buster
+FROM python:3.10-bookworm
 COPY --from=builder /app /app
 ENV PYTHONPATH /app
