--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
 [tool.poetry.dependencies]
 python = "^3.8"
 
-pydantic = ">=1.10"
+pydantic = "^1"
 python-crontab = ">=2.7"
 pyyaml = ">=6.0"
 humanize = ">=4.4"
