--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -13,10 +13,10 @@ jobs:
     - uses: actions/checkout@v2
       name: Checkout code
 
-    - name: Set up Python 3.8
+    - name: Set up Python 3.11
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.11
 
     - name: Install dependencies
       run: |
@@ -24,10 +24,5 @@ jobs:
         poetry config virtualenvs.create false
         poetry install
 
-    - uses: pre-commit/action@v2.0.3
+    - uses: pre-commit/action
       name: Validate code changes using Pre-Commit
-
-    # - name: Run tests
-    #   run: |
-    #     PYTHONPATH=src poetry run pytest -v --cov-report xml:coverage.xml --cov=src
-    #     coverage xml
