--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -24,5 +24,5 @@ jobs:
         poetry config virtualenvs.create false
         poetry install
 
-    - uses: pre-commit/action
+    - uses: pre-commit/action@v3
       name: Validate code changes using Pre-Commit
