--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "function-action-oidc"
 version = "1.1.1"
 description = ""
 authors = ["Håkon Treider <hakon.treider@cognite.com>"]
+package-mode = false
 
 
 [tool.black]
